appId: com.taskmanager.app
---
- launchApp

- extendedWaitUntil:
    visible: "Task Manager"
    timeout: 60000

- tapOn: "Flujo Todo List"

- extendedWaitUntil:
    visible: "Nueva tarea"
    timeout: 10000

- tapOn:
    id: "input-titulo"

- inputText: "Mi primera tarea de prueba"

- tapOn: "Guardar"

- assertVisible: "Tarea creada exitosamente"